# autora-theorist-MAFT

./: .gitignore  LICENSE  README.md  logs.md  mkdocs.yml  pyproject.toml
challenge/: theorist_benchmarking.ipynb  theorist_benchmarking_Franka_Chunking.ipynb  theorist_benchmarking_latest.ipynb  theorist_benchmarking_synthetic-2.ipynb  theorist_benchmarking_synthetic.ipynb
docs/: Additional Example.ipynb  Basic Usage.ipynb  index.md  quickstart.md
src/autora/theorist/maft/: __init__.py  baseline_model.py  feature_eng.py
tests/: test_maft.py
