[project]
# UPDATE THIS BEFORE PUBLISHING
name = "maft"
description = "An equation discovery method"
authors = [{ name = "Ahmet N. Cesmeci", email = "a.n.cesmeci@gmail.com" }]
dynamic = ["version"]

readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8,<4"

# ADD NEW DEPENDENCIES HERE
dependencies = [
    "autora-core",
    "scikit-learn",
    "autora",
]

[project.optional-dependencies]
dev = [
    "autora-core[dev]",
    "autora"
]

[project.urls]
homepage = "http://www.empiricalresearch.ai"
repository = "https://github.com/acesmeci/autora-theorist-MAFT"
documentation = "https://autoresearch.github.io/autora/"


[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

